css/main.css
/* ... */
.industries-infoblock {
  padding-top: 70px;
  padding-bottom: 3.75vw;
  background: #e0e5e4
}
.industries-infoblock--light {
  background: 0 0
}
.industries-infoblock__title {
  padding-left: 20px;
  padding-right: 20px;
  margin-bottom: 20px
}
.industries-infoblock__title .h3 {
  margin: 0;
  line-height: 128%
}
.industries-infoblock__title .h3 br {
  display: none
}
.industries-infoblock__holder {
  margin-left: -20px;
  margin-right: -20px;
  margin-bottom: 20px
}
.industries-infoblock__holder img {
  display: block;
  width: 100%
}
.industries-infoblock__description {
  background: #e0e5e4;
  margin-bottom: 60px;
  letter-spacing: .2px;
  font-weight: 500
}
.industries-infoblock__description p {
  margin: 0 0 .8em
}
.industries-infoblock__description .second {
  padding-left: 50px
}
.industries-infoblock__list {
  margin-bottom: 2.875vw
}
.industries-infoblock__list-item {
  padding: 20px;
  background: #d3dad8;
  text-align: center;
  line-height: 150%;
  margin-bottom: 15px;
  transition: .5s ease;
  letter-spacing: .2px
}
.industries-infoblock__list-item.is-hidden {
  position: absolute;
  opacity: 0;
  pointer-events: none
}
.industries-infoblock__list-more {
  text-align: center;
  padding: 20px
}
.industries-infoblock__list-more a {
  letter-spacing: .1em;
  text-transform: uppercase;
  font-weight: 700;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center
}
.industries-infoblock__list-more a .icon {
  margin-left: 5px
}
@media (min-width:48em) {
  .industries-infoblock {
    padding-top: 1.5vw;
    padding-bottom: 3vw
  }
  .industries-infoblock--light .industries-infoblock__title {
    background: #f4f2f0
  }
  .industries-infoblock--light .industries-infoblock__title:before {
    background: #f4f2f0
  }
  .industries-infoblock--light .industries-infoblock__description {
    background: #f4f2f0
  }
  .industries-infoblock__holder {
    position: relative;
    margin: 0
  }
  .industries-infoblock__holder--left .industries-infoblock__title {
    left: 0;
    right: unset;
    padding: 1.0625vw 2.125vw 1.875vw 1.875vw
  }
  .industries-infoblock__holder--left .industries-infoblock__title:before {
    left: 100%;
    right: unset
  }
  .industries-infoblock__title {
    position: absolute;
    right: 0;
    top: 0;
    background: #e0e5e4;
    padding: 1.0625vw 2.125vw 1.875vw 1.875vw
  }
  /* .industries-infoblock__title:before {
    content: "";
    display: block;
    width: 80px;
    height: 80px;
    background: #e0e5e4;
    position: absolute;
    right: 100%;
    top: 100%
  } */
  .industries-infoblock__title .h3 {
    letter-spacing: .2px
  }
  .industries-infoblock__title .h3 br {
    display: block
  }
  .industries-infoblock__description {
    width: 74.4%;
    padding: 2.75vw 3.4375vw 0 0;
    font-size: 16px;
    margin-top: -7.0625vw;
    position: relative;
    margin-bottom: 0.25vw;
    z-index: 2
  }
}
@media (min-width:48em) and (min-width:768px) {
  .industries-infoblock__description {
    font-size: calc(.0096153846 * 100vw + 8.6153846154px)
  }
}
@media (min-width:48em) and (min-width:1600px) {
  .industries-infoblock__description {
    font-size: 24px
  }
}
@media (min-width:48em) {
  .industries-infoblock__description .second {
    -webkit-transform: translateX(12.25vw);
    transform: translateX(12.25vw);
    padding-left: unset;
    padding-right: 3.125vw
  }
}
@media (min-width:48em) {
  .industries-infoblock__description--right {
    margin-left: auto;
    padding-right: 0;
    padding-left: 3.4375vw
  }
}
@media (min-width:48em) {
  .industries-infoblock__list {
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-auto-rows: 1fr;
    grid-gap: 10px
  }
  .industries-infoblock__list-item {
    -webkit-flex: calc((100% - 30px)/ 3) 0 0;
    -ms-flex: calc((100% - 30px)/ 3) 0 0px;
    flex: calc((100% - 30px)/ 3) 0 0;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin: 0
  }
  .industries-infoblock__list-more {
    font-size: 16px
  }
}
@media (min-width:48em) {
  .industries-infoblock__nomenclature {
    font-size: 16px;
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
    -webkit-column-gap: 15%;
    -moz-column-gap: 15%;
    column-gap: 15%;
    -webkit-column-fill: balance;
    -moz-column-fill: balance;
    column-fill: balance;
    width: 100%;
    list-style: none;
    padding: 40px;
    margin: 0
  }
}
@media (min-width:48em) and (min-width:768px) {
  .industries-infoblock__nomenclature {
    font-size: calc(.0096153846 * 100vw + 8.6153846154px)
  }
}
@media (min-width:48em) and (min-width:1600px) {
  .industries-infoblock__nomenclature {
    font-size: 24px
  }
}
@media (min-width:48em) {
  .industries-infoblock__nomenclature li {
    position: relative;
    padding-left: 1em;
    margin-bottom: .25em
  }
  .industries-infoblock__nomenclature li:before {
    content: "";
    position: absolute;
    left: 0;
    top: .7em;
    display: block;
    width: 6px;
    height: 6px;
    border-radius: 50%;
    background: currentColor
  }
}
@media (min-width:64em) {
  .industries-infoblock__list {
    grid-gap: 30px
  }
  .industries-infoblock__list-item {
    padding: .75vw 1.25vw;
    min-height: 10.5vw
  }
}
@media (min-width:75em) {
  .industries-infoblock__list-item {
    min-height: 9.5vw
  }
}
@media (min-width:90em) {
  .industries-infoblock__list-item {
    min-height: 125px
  }
}
.experience-intro {
  position: relative;
  padding-top: 70px;
  padding-bottom: 50px
}
.experience-intro__container {
  position: relative
}
/* ... */

